--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,16 +3,16 @@ repos:
     rev: 19.10b0
     hooks:
       - id: black
-        language_version: python3.8
+        language_version: python3.7.9
 
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.2.3
-    hooks:
-      - id: trailing-whitespace
-        exclude: ^templates/templated_email/compiled/
-      - id: end-of-file-fixer
-        exclude: ^templates/templated_email/compiled/
-      - id: flake8
+#  - repo: https://github.com/pre-commit/pre-commit-hooks
+#    rev: v2.2.3
+#    hooks:
+#      - id: trailing-whitespace
+#        exclude: ^templates/templated_email/compiled/
+#      - id: end-of-file-fixer
+#        exclude: ^templates/templated_email/compiled/
+#      - id: flake8
 
   - repo: https://github.com/asottile/seed-isort-config
     rev: v1.9.2
@@ -24,12 +24,12 @@ repos:
     hooks:
       - id: isort
 
-  - repo: https://github.com/pycqa/pydocstyle
-    rev: 4.0.0
-    hooks:
-      - id: pydocstyle
-        files: ^saleor/
-        exclude: tests/
+#  - repo: https://github.com/pycqa/pydocstyle
+#    rev: 4.0.0
+#    hooks:
+#      - id: pydocstyle
+#        files: ^saleor/
+#        exclude: tests/
 
   - repo: https://github.com/prettier/prettier
     rev: 1.18.2
@@ -38,12 +38,12 @@ repos:
         files: ^saleor/static/*.*\.js$
         verbose: true
 
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v0.761
-    hooks:
-      - id: mypy
-        language: system
-        exclude: tests/
+#  - repo: https://github.com/pre-commit/mirrors-mypy
+#    rev: v0.761
+#    hooks:
+#      - id: mypy
+#        language: system
+#        exclude: tests/
 
   - repo: local
     hooks:
